@@ -10,10 +10,25 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>Bear</name>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <modules>
         <module>bear-parent</module>
         <module>bear-common</module>
         <module>bear-boot</module>
+        <module>bear-security</module>
     </modules>
 
 </project>
